typescript/checker/tests/conformance/es6/templates/taggedTemplateWithConstructableTag02.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            78,
        ),
        hi: BytePos(
            81,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/taggedTemplateWithConstructableTag02.ts:5:5
  |
5 | var tag: I;
  |     ^^^

